--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>vai ser uma imagem aqui</h1>
+        <img class="cabecalho-imagem" src="coruja.jpeg" alt="logo da coruja">
         <ul>
             <li>Saiba mais sobre o nosso curso  em :</li>
             <li>www.vestubulando.cursosonline.br</li>
