--- a/index.html
+++ b/index.html
@@ -8,12 +8,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <img class="cabecalho-imagem" src="coruja.jpeg" alt="logo da coruja">
-        <ul>
-            <li>Saiba mais sobre o nosso curso  em :</li>
-            <li>www.vestubulando.cursosonline.br</li>
+    <header class="cabecalho">
+    <img class="cabecalho-imagem" src="coruja.jpeg" alt="logo da coruja">
+        <ul class="cabecalho-lista">
+            <li class="cabecalho-lita-item">Saiba mais sobre o nosso curso  em :</li>
+            <li class="cabecalho-lita-item">www.vestubulando.cursosonline.br</li>
         </ul>
+    
     </header>
+<section class="coruji"></section>
+<h2 class="coruji-título">Sobre a pág</h2>
+<p class="coruji-texto-um">         Hoje, apresentamos as melhores formas  de estudo  para quem quer ser aprovado:</p>
+<p class="coruji-texto-dois"></p>
 </body>
 </html>
