--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+    <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,19 +6,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="cabecalho">
-    <img class="cabecalho-imagem" src="coruja.jpeg" alt="logo da coruja">
+        <img class="cabecalho-imagem" src="mulher.png" alt="logo de estudante">
         <ul class="cabecalho-lista">
             <li class="cabecalho-lita-item">Saiba mais sobre o nosso curso  em :</li>
             <li class="cabecalho-lita-item">www.vestubulando.cursosonline.br</li>
         </ul>
-    
     </header>
-<section class="coruji"></section>
-<h2 class="coruji-título">Sobre a pág</h2>
-<p class="coruji-texto-um">         Hoje, apresentamos as melhores formas  de estudo  para quem quer ser aprovado:</p>
-<p class="coruji-texto-dois"></p>
-</body>
+    <section class="sabo">
+        <div class="sabo-div-conteudo">
+            <h2 class="sabo-titulo">Sobre a pág</h2>
+            <p class="sabo-texto-um"> Hoje, apresentam  os as melhores formas  de estudo  para quem quer ser aprovado:</p>
+            <p class="sabo-texto-dois">Olá, neste site reunimos as melhores formas de apredizado sobre vestibulares e ENEM. Nosso objetivo em comum é ajudar os estudantes a obterem o melhor resultado com seus estudos no menor tempo possível !!!</p>
+        </div>
+        <img class="sabo-imagem" src="formatura.png" alt="formatura">
+    </section class="dicas">
+           <h2 class="dicas-titulo">Dicas de hoje :</h2>
+           <img class="pomodoro-imagem" src="pomodoro.png" alt="foto do pomodoro">
+           <h3 class="pomodoro-titulo">Pomodoro</h3>
+           <h4 class="pomodoro-texto-um"> A técnica Pomodoro consiste em estabelecer X minutos para estudar de forma ininterrupta e depois descansar por 15 minutos.</h4>
+           <img class="resumo-imagem" src="resumo.png" alt="foto do resumo">
+           <h3 class="resumo-titulo">Resumos</h3>
+           <h4 class="resumo-texto-um">O velho e bom resumo é uma das técnicas de estudo mais eficazes que existe. Para praticá-la é muito simples: leia os conteúdos e escreva textos resumidos com as suas próprias palavras.</h4>
+           <img class="mapa-imagem" src="mapa.png" alt="mapa mental">
+           <h3 class="mapa-titulo">Mapas mentais</h3>
+           <h4 class="mapa-imagem-um">Os mapas mentais são ideias para quem tem um raciocínio mais visual. A técnica é simples: basta desenhar um mapa ou esquema com as principais ideias do conteúdo.</h4>
+           <img class="prova-imagem" src="prova.png" alt="foto da prova">
+           <h3 class="prova-titulo">Estudo por provas</h3>
+           <h4 class="prova-texto-um">Cada questão resolvida deve ser analisada e marcada, sinalizando de qual matéria e assunto trata</h4>
+        </section>
+        <footer class="rodape">
+            <img class="rodape-imagem" src="mulher.png" alt="foto da mulher">
+         </footer>
+</body> 
 </html>
